# watchpid

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
tests/: test_watchpid.py
watchpid/: __init__.py
